Add test data factory

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,4 +85,5 @@ extra_javascript:
 # Navigation configuration
 nav:
   - Component Library: /component-library/overview/components
+  - Test Data Factory: /test-data-factory
   - Setup Audit Trail Reference: /setup-audit-trail/reference
