--- a/subsites/component-library/mkdocs.yml
+++ b/subsites/component-library/mkdocs.yml
@@ -26,7 +26,7 @@ theme:
     # - content.tabs.link
     - content.tooltips
     # - header.autohide
-    - navigation.expand
+#    - navigation.expand
     - navigation.footer
     # - navigation.indexes
     # - navigation.instant
