Fix components.md conflict with components.html

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,6 @@ extra_javascript:
   
 # Navigation configuration
 nav:
-  - Component Library: /component-library/overview/components/
-  - Test Data Factory: /test-data-factory/
-  - Setup Audit Trail Reference: /setup-audit-trail/reference/
+  - Component Library: /component-library/overview/components
+  - Test Data Factory: /test-data-factory
+  - Setup Audit Trail Reference: /setup-audit-trail/reference
