--- a/subsites/component-library/mkdocs.yml
+++ b/subsites/component-library/mkdocs.yml
@@ -84,12 +84,12 @@ extra_javascript:
 nav:
   - Component Reference: overview/components.md
   - Apex:
-    - JSON Preprocessor: bundle/json-preprocessor.md
-    - Lightning Error: bundle/lightning-error.md
-    - Lightning Response: bundle/lightning-response.md
+    - JSON Preprocessor: json-preprocessor.md
+    - Lightning Error: lightning-error.md
+    - Lightning Response: lightning-response.md
   - LWC:
-    - Alert: bundle/alert.md
-    - Error Handler: bundle/error-handler.md
-    - Spinner: bundle/spinner.md
+    - Alert: alert.md
+    - Error Handler: error-handler.md
+    - Spinner: spinner.md
       
 
