Add One Logger docs.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ extra_javascript:
   
 # Navigation configuration
 nav:
+  - One Logger: /one-logger
   - Component Library: /component-library/overview/components
   - Test Data Factory: /test-data-factory
   - Setup Audit Trail Reference: /setup-audit-trail/reference
