Update release notes

--- a/subsites/one-logger/mkdocs.yml
+++ b/subsites/one-logger/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
       - LoggerTestUtil: docs/reference/LoggerTestUtil.md
   - Release Notes:
     - latest: docs/release-notes/latest.md
+    - "1.53": docs/release-notes/1.53.md
     - "1.52": docs/release-notes/1.52.md
     - "1.51": docs/release-notes/1.51.md
     - "1.50": docs/release-notes/1.50.md
