--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
             mkdocs-material-
       - run: pip install mkdocs-material
       - run: pip install mkdocs-minify-plugin
+      - run: pip install mkdocs-section-index
       - run: make mkdocs-build-multisite
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
