--- a/subsites/one-logger/mkdocs.yml
+++ b/subsites/one-logger/mkdocs.yml
@@ -7,6 +7,9 @@ plugins:
   - search:
 #      separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
       separator: '[\s\u200b\-\.,!=\[\]()"`/]+'
+  - section-index
+  - minify:
+      minify_html: true
 theme:
   name: material
   logo: ../images/logo_kratapps.svg
