--- a/subsites/one-logger/mkdocs.yml
+++ b/subsites/one-logger/mkdocs.yml
@@ -33,8 +33,8 @@ theme:
     # - navigation.instant.progress
     - navigation.path
     # - navigation.prune
-    - navigation.sections
-#    - navigation.tabs
+    #- navigation.sections
+    - navigation.tabs
     # - navigation.tabs.sticky
     - navigation.top
     - navigation.tracking
